<?xml version="1.0" encoding="utf-8"?>
<resources>
    <string name="notes_list_title">Your Journal</string>
    <string name="notes_detail_title">Journal Entry</string>
    <string name="note_add_title">New Note</string>
    <string name="note_edit_title">Edit Note</string>

    <string name="add_note">Add Note</string>
    <string name="delete_note">Delete Note</string>
    <string name="delete_notes">Delete Notes</string>
    <string name="edit_note">Edit Note</string>
    <string name="share_note">Share Note</string>
    <string name="save_note">Save Note</string>

    <string name="notes_list_error">Failed to load the list of notes:\n%s</string>
    <string name="notes_details_error">Failed to load note:\n%s</string>
    <string name="validation_error">Validation Error</string>
    <string name="emotions_error">Failed to load emotions</string>

...
    <string name="before_text">Before: %d</string>
    <string name="after_text">After: %d</string>

    <string name="text_placeholder">Enter text…</string>
    <string name="info">Info</string>
    <string name="not_filled">Not Filled</string>
    <string name="discard_changes">Discard Changes</string>
    <string name="cant_delete_note">Can\'t Delete Note</string>
    <string name="cant_save_note">Can\'t Save Note</string>
    <string name="thought_number">Thought %d:&#160;</string>
    <string name="alternative">Alternative:&#160;</string>
    <string name="share_subject">Share note from my CBT Journal</string>
    <string name="delete_warning">Are you sure you want to delete this note? This action cannot be undone.</string>
    <string name="delete_selected_warning">Are you sure you want to delete selected notes? This action cannot be undone.</string>
    <string name="discard_changes_warning">All unsaved changes will be lost. Are you sure you want to exit?</string>
    <string name="validation_warning">Please fill in the required fields:\n%s</string>
    <string name="notes_details_placeholder">Select a note to view its details</string>
    <string name="empty_journal_placeholder">Your journal is empty. Add a note to begin your journey!</string>
    <string name="ok_label">OK</string>
    <string name="cancel_label">Cancel</string>
    <string name="back">Back</string>

    <string name="no_recent_searches">No recent searches</string>
    <string name="recent_searches">Recent searches</string>
    <string name="clear_all">Clear all</string>
    <string name="no_search_results">Nothing found</string>
    <string name="delete_recent_search">Delete</string>
    <string name="clear_query">Clear query</string>
    <string name="search_placeholder">Find your situation</string>
    <string name="search">Search</string>

    <string name="situation_tab">Situation</string>
    <string name="interpretation_tab">Interpretation</string>
    <string name="reframing_tab">Reframing</string>

</resources>
...
